# MusicMood

./: .env  .gitignore  README.md  package-lock.json  package.json
backend/: .env  .env.example  db.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/musicmatch/: settings.py  urls.py  wsgi.py
backend/recommendations/: api.py  models.py  schemas.py  services.py
backend/users/: api.py  auth.py  models.py  schemas.py  urls.py  views.py
frontend/: .env.example  package.json
frontend/src/: App.vue
frontend/src/components/: MusicForm.vue  NavBar.vue  RecommendationList.vue
frontend/src/config/: constants.ts
frontend/src/router/: index.ts
frontend/src/services/: ai.service.ts  auth.service.ts
frontend/src/types/: auth.ts  music.ts  user.ts
frontend/src/views/: Home.vue  Login.vue  Profile.vue  Register.vue
